server/debug_output_v4.log
file:///Users/giovanics/Documents/Reposto%CC%81rios/DynamicFront/server/scripts/debug_executor_live.js:2
import { executor } from '../agents/Executor.js';
         ^^^^^^^^
SyntaxError: The requested module '../agents/Executor.js' does not provide an export named 'executor'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.12.0
